@@ -1,3 +1,8 @@
+Wed Mar 20 19:36:21 1996  Richard Basch  <basch@lehman.com>
+
+	* krlogind.c (recvauth): use the library routines to do v4 to v5
+	principal translation, for a more accurate representation.
+
 Tue Mar 19 20:11:28 1996  Richard Basch  <basch@lehman.com>
 
 	* kcmd.c (ruserok): declare the function as taking const char *
